-Cover Footer: added Cover and Footer plugin
-Merge: print style page selection (Es. 1,3-6,11,13)
-Added save and load environment
-Added Settings section
-XMLParser and XMLConfig rebuilt using dom4j
-Completely new MainGUI
-Fixed log panel caret position (by Aniket Dutta)
-Added configuration singleton
-plugin interface and abstract class Rewritten
-Added plugs panels icons
-dom4j 1.6.1
-jaxen 1.1
-iText 1.4.8
-looks 2.1.1

0.6 stable release
===================================
-Console: fixed a bug if no -u option given
-Added German and Russian languages
-iText 1.4.4

0.6 beta 1
===================================
-Split: output files name now have leading zero(s) for better sorting
-Split: modified "split at this page" in "split after these pages"
-Split: now splitting a pdf file has its own thread. A progress bar shows the work done
-Split&Merge: better format for log messages
-Split&Merge: now bookmarks list is managed according with the merge action. Bug #1490115
-Merge: minor fixes
-Merge: now adding a pdf has its own thread and better user interface shows what pdfsam is doing
-Merge: now merging pdf files has its own thread. A progress bar shows the work done
-Merge: fix Bug #1529037 
-Console: fixes to prevent OutOfMemory exception while creating PdfReader
-Console: fixes in PdfSplit and PdfConcat constructors. Bug #1521679
-GUI i18n support using langpack. (Console messages still in english)
-Added "Clear log" function
-iText 1.4.2

0.5 beta 3
===================================
-Split: JTextField.requestFocus when "split at this page" or "every n pages" is selected
-Merge: Multiple Drag&Drop change order enabled
-Merge: Drop Multifile selection from OS enabled
-Merge: Drop disabled in destination JText
-Merge: addTableRow method added
-Merge: Canc key (and not Alt+Canc) now removes items from merge_table
-Merge: MultiSelection MoveUp, MoveDown, Canc
-Console: Buffer file in doConcat Bug #1499436
-Console: -overwrite parameter added