@@ -3,7 +3,7 @@
 <pdfsam> 
   <info> 
     <name>PDF Split and Merge</name>  
-    <version>1.1.5 enanched</version>  
+    <version>1.1.8e alpha</version>  
     <build_date>27 Dec. 2006</build_date>  
     <language>Java(TM) 2 SDK, Standard Edition, Version 1.4.2</language> 
   </info>  
@@ -12,8 +12,8 @@
       <LAF>5</LAF>  
       <theme>14</theme> 
     </lookAndfeel>  
-    <i18n>en_GB</i18n>  
-    <plugs_absolute_dir>F:\workspace_pdfsame\pdfsam-maine\plugins</plugs_absolute_dir>  
+    <i18n>it_IT</i18n>  
+    <plugs_absolute_dir>F:\workspace_pdfsame_enanched\pdfsam-maine\plugins</plugs_absolute_dir>  
     <defaultjob></defaultjob>  
     <loglevel>1</loglevel> 
   </settings>  
